// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format with @linter/provider-eslint and @linter/prettier text and filePath 1`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "prettier:const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with @linter/provider-eslint text and filePath 1`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with @linter/provider-eslint with no linter for file extension 1`] = `
Object {
  "errorCount": 0,
  "filePath": "foo.ts",
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with no installed linter providers 1`] = `[Error: No linter providers found. Please install at least one linter provider package.]`;
